--- a/sass/main.css
+++ b/sass/main.css
@@ -72,7 +72,7 @@ p {
   width: 32.3rem;
   background-color: #Fff;
   cursor: pointer;
-  background-image: url(/images/img1.png);
+  background-image: url(/images/imgfour.png);
   background-repeat: no-repeat;
   background-size: 30rem;
 }
@@ -82,7 +82,7 @@ p {
   width: 32.3rem;
   background-color: #Fff;
   cursor: pointer;
-  background-image: url(/images/img2.png);
+  background-image: url(/images/imgone.png);
   background-repeat: no-repeat;
   background-size: 30rem;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.25);
@@ -93,7 +93,7 @@ p {
   width: 32.3rem;
   background-color: #Fff;
   cursor: pointer;
-  background-image: url(/images/img3.png);
+  background-image: url(/images/imgtwo.png);
   background-repeat: no-repeat;
   background-size: 30rem;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.25);
@@ -104,7 +104,7 @@ p {
   width: 32.3rem;
   background-color: #Fff;
   cursor: pointer;
-  background-image: url(/images/img4.png);
+  background-image: url(/images/imgthree.png);
   background-repeat: no-repeat;
   background-size: 30rem;
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.25);
